# scaffold-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_REVIEW.md  CRITICAL_REVIEW_SUMMARY.md  CRITICAL_SECURITY_FIXES.md  DEVELOPMENT_JOURNEY.md  GITHUB_SETUP.md  LANGGRAPH_VS_STEP_FUNCTIONS.md  LAUNCH_CHECKLIST.md  LICENSE  PUBLIC_PORTFOLIO_PREP.md  README.md  README_PUBLIC_RELEASE.md  RELEASE_SUMMARY.md  RESUME_LINKEDIN_UPDATES.md  ROUND_3_FINDINGS.md  ROUND_3_REMEDIATION_COMPLETE.md  RUNBOOK.md  SCREENSHOTS_GUIDE.md  SECURITY_AUDIT.md  SESSION_2_SUMMARY.md  SESSION_4_SUMMARY.md  SESSION_SUMMARY.md  SESSION_WORK_SUMMARY.md  TESTING_SUMMARY.md  config.json  deploy-frontend.sh  deploy.sh  dev.sh  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/agents/: pyproject.toml
apps/agents/shared/: config.py  db.py
apps/agents/tests/: conftest.py  test_config.py  test_db.py
apps/backend/: .env.example  README.md  SECURITY_GATE_SUMMARY.md  SECURITY_GATE_TESTS.md  SECURITY_GATE_TEST_RESULTS.md  coverage.json  package.json  pyproject.toml  security_gate_demo.txt  test-results.json  test_security_manual.py  verify_security_gate.py
apps/backend/src/scaffold_ai/: __init__.py  config.py  main.py
apps/backend/src/scaffold_ai/agents/: __init__.py  architect.py  cdk_specialist.py  cloudformation_specialist.py  interpreter.py  python_cdk_specialist.py  react_specialist.py  security_specialist.py  terraform_specialist.py
apps/backend/src/scaffold_ai/graph/: __init__.py  nodes.py  state.py  workflow.py
apps/backend/src/scaffold_ai/services/: cdk_deployment.py  cdk_generator.py  cost_estimator.py  security_autofix.py  security_history.py  sharing.py  stack_splitter.py  templates.py
apps/backend/src/scaffold_ai/tools/: __init__.py  git_operator.py  synthesizer.py
apps/backend/src/scaffold_ai/utils/: llm_utils.py
apps/backend/tests/: __init__.py  test_architect_node.py  test_cdk_deployment.py  test_cdk_generator.py  test_cost_estimator.py  test_lambda_handlers.py  test_main.py  test_plan_import.py  test_security_autofix.py  test_security_fixes.py  test_security_gate.py  test_services.py  test_stack_splitter_cost_estimator.py  test_synthesizer_and_agents.py  test_units.py
apps/backend/tests/manual/: test_security_manual.py
apps/functions/: pyproject.toml  pytest.ini
apps/functions/architect/: handler.py
apps/functions/cdk_specialist/: cdk_generator.py  cloudformation_specialist.py  handler.py  stack_splitter.py  terraform_specialist.py
apps/functions/get_execution/: handler.py
apps/functions/interpret/: handler.py
apps/functions/react_specialist/: handler.py  react_specialist.py
apps/functions/security_review/: handler.py
apps/functions/tests/: conftest.py  test_get_execution.py  test_interpret.py
apps/infra/: cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
apps/web/: .env.example  .env.local.example  e2e.html  index.html  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/lib/: api.ts  (+5 more)
docs/: MULTI_FORMAT_IAC.md  architecture.html
docs/steering/: project-standards.md
(+106 files in other folders)
