[project]
name = "scaffold-ai-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pydantic-settings>=2.0", "boto3>=1.35"]

[tool.pytest.ini_options]
addopts = "--cov=shared --cov-report=json --cov-report=term-missing -q"
markers = ["unit: fast isolated tests", "integration: tests requiring mocked AWS services", "slow: tests that take >5s"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "moto[dynamodb]>=5.0", "ruff>=0.8"]
