[project]
name = "scaffold-ai-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend for Scaffold AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "boto3>=1.35.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-json-report>=1.5.0",
    "pip-audit>=2.7.0",
    "httpx>=0.28.0",
    "moto[dynamodb,s3,secretsmanager,ssm,stepfunctions]>=5.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scaffold_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=json --cov-report=term-missing --json-report --json-report-file=test-results.json -q"
markers = [
    "unit: fast isolated tests",
    "integration: tests requiring mocked AWS services",
    "slow: tests that take >5s",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-json-report>=1.5",
    "moto[s3,dynamodb,ssm,secretsmanager]>=5.0",
    "ruff>=0.7.0",
]
