[project]
name = "scaffold-ai-functions"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.34.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-json-report>=1.5",
    "pip-audit>=2.7",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
